# DLSS-Updater

./: .gitattributes  .gitignore  .python-version  DLSS-Updater.nuspec  DLSS_Updater.spec  DLSS_Updater_Linux.spec  DLSS_Updater_MSI.spec  LICENSE  README.md  VERIFICATION.TXT  build_appimage.sh  build_exe.py  build_flathub.sh  build_flatpak.sh  build_msi.ps1  io.github.recol.dlss-updater.appdata.xml  io.github.recol.dlss-updater.metainfo.xml  io.github.recol.dlss-updater.yml  io.github.recol.dlss_updater.metainfo.xml  main.py  main.spec  pyproject.toml  release_notes.txt  requirements.txt  run_dlss_updater.bat  sync_to_wsl.sh  version.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: bandit.yml  build-appimage.yml  build-flatpak.yml  build-msi.yml  chocolatey-release.yml  codspeed.yml  dependency-review.yml  discord-notify  discord-notify.yml  ossar.yml  osv-scanner.yml  pylint.yml  pyre.yml  python-app.yml  stale.yml  star-history.yml  update-download-badge.yml  update-version-badge.yml  winget-build.yml  winget-release.yml
assets/star-history/: .star-history.sig
benchmarks/: test_scanner_performance.py  test_utils_performance.py
dlss_updater/: __init__.py  auto_updater.py  backend_scaffold_spec.py  backup_manager.py  cache_manager.py  concurrency_limiters.py  config.ini  config.py  constants.py  database.py  discord_presence.py  dll_repository.py  dlss_preset_utils.py  exe_resolver.py  gpu_detection.py  high_performance_updater.py  image_optimizer.py  linux_dlss_utils.py  linux_paths.py  logger.py  models.py  name_normalize.py  nvapi_drs.py  platform_utils.py  proton_compat.py  registry_utils.py  reresolution.py  scanner.py  search_service.py  steam_integration.py  system_tray.py  task_registry.py  updater.py  utils.py  vdf_parser.py  version.py  whitelist.py  windows_aumid.py
dlss_updater/lib/: thread_manager.py  threading_lib.py
dlss_updater/main_ui/: animated_toggle.py  main_window.py
dlss_updater/services/: __init__.py  backup_service.py
dlss_updater/ui_flet/: __init__.py  async_updater.py  hyper_parallel_loader.py  perf_monitor.py
dlss_updater/ui_flet/components/: __init__.py  app_bar_menus.py  app_menu_selector.py  backup_card.py  backup_group.py  dll_cache_snackbar.py  favorites_manager.py  floating_pill.py  game_card.py  hero_surface.py  hub_card.py  launcher_card.py  loading_overlay.py  logger_panel.py  navigation_drawer.py  search_bar.py  steam_api_card.py  theme_manager.py
dlss_updater/ui_flet/components/slide_panel/: __init__.py  panel_content_base.py  panel_manager.py  slide_panel.py
dlss_updater/ui_flet/dialogs/: __init__.py  app_update_dialog.py  blacklist_dialog.py  discord_rpc_dialog.py  dll_group_dialog.py  dlss_overlay_dialog.py  dlss_preset_dialog.py  high_perf_warning_dialog.py  keyboard_shortcuts_dialog.py  release_notes_dialog.py  rollback_warning_dialog.py  shutdown_progress_dialog.py  steam_resolve_dialog.py  system_tray_dialog.py  update_preferences_dialog.py  update_summary_dialog.py
dlss_updater/ui_flet/navigation/: __init__.py  navigation_controller.py
dlss_updater/ui_flet/panels/: __init__.py  blacklist_panel.py  dlss_preset_panel_base.py  dlss_settings_panel.py  ignore_list_panel.py  launcher_games_panel.py  linux_dlss_panel.py  per_game_dlss_panel.py  preferences_panel.py  proton_upscaler_panel.py  release_notes_panel.py  ui_preferences_panel.py
dlss_updater/ui_flet/theme/: __init__.py  colors.py  md3_system.py  theme_aware.py
dlss_updater/ui_flet/views/: __init__.py  backups_view.py  dashboard_view.py  games_view.py  hub_view.py  main_view.py  settings_view.py
flathub/: .gitignore  dev.yml  flatpak-flutter.yml  gen_pip_sources.py  io.github.recol.dlss_updater.yml  launcher.sh  trim_flet_client.py
flathub/modules/: cpython.json
flathub/patches/: flet-client-trim.patch
flatpak/: io.github.recol.dlss-updater.desktop  io.github.recol.dlss_updater.desktop
hooks/: hook-dlss_updater.py  hook-pefile.py  hook-psutil.py  hook-requests.py
pyinstaller_hooks/: hook-msgspec.py
tests/: __init__.py  test_name_normalize.py  test_orphaned_backups.py  test_proton_upscaler.py  test_thread_safety.py
tools/: chocolateyBeforeModify.ps1  chocolateyInstall.ps1  chocolateyUninstall.ps1  nvapi_perapp_probe.py  smoke_exe_resolver.py
